# bamboo_music_metadata

./: Cargo.toml
examples/artist/: billie_eilish.json  main.rs
src/: identifier.rs  lib.rs
src/entities/: artist.rs  mod.rs  release.rs  release_group.rs  track.rs  work.rs
