[package]
name = "bamboo_music_metadata"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bamboo_metadata = { path = "../bamboo_metadata" }
chrono = "0.4.19"
iso639_enum = "0.1.1"
isocountry = "0.3.2"
uuid = "0.8.2"
