[package]
name = "bamboo_music_metadata"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bamboo_metadata = { path = "../bamboo_metadata" }
chrono = { version = "0.4.0", features = ["serde"] }
isocountry = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.6", features = ["serde", "v4"] }
